--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,6 @@
 [server]
 enableStaticServing = true
+STREAMLIT_SERVER_ENABLE_STATIC_SERVING=true
 maxUploadSize = 1024
 [theme]
 font = "Times New Roman"
