--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,6 @@
 [server]
-enableStaticServing = true
 maxUploadSize = 1024
+
 [theme]
-font = "Times New Roman"
-headingFont = "Times New Roman"
-codeFont = "monospace"
-[theme.sidebar]
-font = "Times New Roman"
-headingFont = "Times New Roman"
-codeFont = "monospace"
+base = "dark"
+borderColor = "mediumSlateBlue"
